--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Fenix - Technologies </title>
+  <title>Fenix - Technologies (Guillermo)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Bootstrap 3 template for corporate business" />
   <!-- css -->
