--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 								<a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Demos <i class="fa fa-angle-down"></i></a>
 								<ul class="dropdown-menu">
 									<li><a href="http://158.69.165.236/VentasOnline">Ventas Online</a></li>
-									<li><a href="index2.html">Ventas Online Movil</a></li>
+									<li><a href="index2.html">Ventas Online Movil, esta es una prueba de git</a></li>
 							
 									
 								</ul>
@@ -89,7 +89,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <h2>Contactanos  <small>Ponte en contacto con nosotros llena el siguiente formulario.</small></h2>
+            <h2>Contactanos  <small>Ponte en contacto con nosotros llena el siguiente formulario prueba de git.</small></h2>
             <hr class="colorgraph">
             <div id="sendmessage">Your message has been sent. Thank you!</div>
             <div id="errormessage"></div>
